ZONG-38: tests continued